--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Jakob.zero</title>
 </head>
 <body>
-  hello! I'm Jakob.Zero. This is my homepage.
+  hello! I'm Jakob.zero. This is my homepage.
 </body>
 </html>
