--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Jakob.zero</title>
 </head>
 <body>
-  hello! I'm Jakob.zero. This is my homepage.
+  <h2>Welcom!!!</h2>
+  <h1>hello! I'm Jakob.zero. This is my homepage.</h1>
 </body>
 </html>
