--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Jakob.zero</title>
 </head>
 <body>
-  <h2>Welcom!!!</h2>
-  <h1>hello! I'm Jakob.zero. This is my homepage.</h1>
+  <h2><b>Welcom!!!</b></h2>
+  <p>hello! I'm Jakob.zero. This is my homepage.</p>
 </body>
 </html>
