--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h2><b>Welcom!!!</b></h2>
-  <p>hello! I'm Jakob.zero. This is my homepage.</p>
+  <p>hello! I'm Jakob.zero. This is my world.</p>
 </body>
 </html>
