--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <img src="https://s2.loli.net/2022/09/26/WTAcFpOEf3CHGPk.png"/>
   <h2><b>Welcom!!!</b></h2>
-  <p>hello! I'm Jakob.zero. This is my world.</p>
+  <p>Hello, I'm Jakob.zero and this is my world.</p>
   
   <img src="https://s2.loli.net/2022/09/26/QBmdHvlh3rO1q9K.png"/>
 </body>
