--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <img src="https://s2.loli.net/2022/09/26/WTAcFpOEf3CHGPk.png"/>
-  <h2><b>Welcom!!!</b></h2>
+  <h2><b>Welcome!!!</b></h2>
   <p>Hello, I'm Jakob.zero and this is my world.</p>  
   <img src="https://s2.loli.net/2022/09/26/QBmdHvlh3rO1q9K.png"/>
 </body>
