--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light" style="color-scheme: light:">
+<html lang="en" data-theme="dark" style="color-scheme: dark:">
   <head>
     <meta charset="UTF-8"></meta>
     <title>Jakob.zero</title>
