--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8"></meta>
     <meta property="og:image" content="https://s2.loli.net/2022/09/26/zNZaMVgDjp2mXWv.png">
     <title>Jakob.zero</title>
+  * ｛
+      background-color:grey;
+  ｝
 </head>
 <body>
   <img src="https://s2.loli.net/2022/09/26/zNZaMVgDjp2mXWv.png"/>
