--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
       <title>Jakob.zero</title>
     </head>
   <body>
+    <style type="text/css">
+      .header-image {
+        background: url('assets/images/background_00.jpg') no-repeat center center;
+        background-size: cover;
+        padding-bottom: 18%;
+      }
+    </style>
       <img src="https://s2.loli.net/2022/09/26/zNZaMVgDjp2mXWv.png"/>
       <h2><b>Welcome!!!</b></h2>
       <p>Hello, I'm Jakob.zero. This is my world.</p>  
