--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset="UTF-8"></meta>
-      <title>Jakob.zero</title>
+      <title>Jakob.zero | Home</title>
     </head>
   <body>
     <style type="text/css">
