--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <style type="text/css">
       .header-image {
-        background: url('assets/images/background_00.jpg') no-repeat center center;
+        background: url('../assets/images/background_00.jpg') no-repeat center center;
         background-size: cover;
         padding-bottom: 18%;
       }
