--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
   <body>
     <style type="text/css">
-      <head class＝header-image> {
+      <class＝header-image> {
         background: url('../assets/images/background_00.jpg') no-repeat center center;
         background-size: cover;
         padding-bottom: 18%;
