--- a/index.html
+++ b/index.html
@@ -1,20 +1,187 @@
 <!DOCTYPE html>
-<html>
-  <head>
-      <meta charset="UTF-8"></meta>
-      <title>Jakob.zero | Home</title>
-    </head>
-  <body>
+<!-- saved from url=(0020)https://PixelRuins.net/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- Site Metadata -->
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="PixelRuins )">
+    <meta name="keywords" content="Pixel, PixelArt, Texture Pack, Resource Pack, Minecraft, r">
+    <meta name="author" content="Jakob.zero">
+    <!-- Site Font -->
+    <link href="./Soartex _ Home_files/css" rel="stylesheet" type="text/css">
+    <!-- Site Title -->
+    <title>Soartex | Home</title>    <!-- Site CSS Styles -->
+    <link rel="shortcut icon" href="../assets/images/Jakob_Logo-64.ico">
+    <link rel="stylesheet" type="text/css" href="./assets/theme/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/theme/css/dataTables.bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./assets/theme/css/soartex_site.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body role="document">
+    <!-- Navigation -->
     <style type="text/css">
-      .header-image {
-        background: url('../assets/images/background_00.jpg') no-repeat center center;
-        background-size: cover;
-        padding-bottom: 18%;
+  .header-image {
+    background: url('../assets/images/background_00.jpg') no-repeat center center;
+    background-size: cover;
+    padding-bottom: 18%;
+  }
+</style>
+<!-- Header Image -->
+<div class="container-fluid header-image">
+  <div class="container">
+    <div class="pull-right">
+      <img class="logo-BlockPixel" src="https://s2.loli.net/2022/09/26/QBmdHvlh3rO1q9K.png" alt="BlockPixel Logo">    </div>
+  </div>
+</div>
+<!-- Navigation / Header -->
+<div id="sticky-anchor"></div>
+<nav id="soartex-home-nav" class="navbar navbar-static-top navbar-inverse soartex-nav-bottom" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-soartex-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="https://soartex.net/">Home</a>
+    </div>
+    <div class="collapse navbar-collapse navbar-soartex-collapse">
+      <ul class="nav navbar-nav">
+        <!-- <li><a href="http://forums.soartex.net/"><span class="glyphicon glyphicon-user"></span> Forum</a></li> -->
+        <li class="dropdown">
+          <a href="https://soartex.net/#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cloud-download"></span> Downloads <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="https://soartex.net/downloads/">Vanilla</a></li>
+            <li class="divider"></li>
+            <li><a href="https://soartex.net/downloads/modpacks/">Universal</a></li>
+            <li><a href="https://soartex.net/downloads/modpacks/curse/">Curse</a></li>
+            <li><a href="https://soartex.net/downloads/modpacks/ftb/">FTB</a></li>
+            <li><a href="https://soartex.net/downloads/modpacks/technic/">Technic</a></li>
+            <li><a href="https://soartex.net/downloads/modpacks/atlauncher/">ATLauncher</a></li>
+            <li class="divider"></li>
+            <li><a href="https://soartex.net/downloads/mods/">Mods</a></li>
+          </ul>
+        </li>
+        <li><a href="https://soartex.net/news/"><span class="glyphicon glyphicon-info-sign"></span> News</a></li>
+        <li><a href="https://soartex.net/license/"><span class="glyphicon glyphicon-lock"></span> License</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="https://soartex.net/#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-question-sign"></span> Other <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <!-- <li><a href="/twitch/"><span class="glyphicon glyphicon-film"></span> Streams</a></li> -->
+            <!-- <li role="presentation" class="divider"></li> -->
+            <li><a href="https://soartex.net/tools/">Tools</a></li>
+            <li><a href="https://soartex.net/faq/">FAQ</a></li>
+            <li><a href="https://soartex.net/staff/">Staff</a></li>
+            <li><a href="https://soartex.net/contact/">Contact</a></li>
+            <li role="presentation" class="divider"></li>
+            <li><a href="https://soartex.net/donate/">Donate <span class="glyphicon glyphicon-share-alt"></span></a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>    <!-- JS Required -->
+    <noscript>
+      <div class="container alert alert-danger alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <strong>Danger!</strong><br/>Your browser does not support javascript. This site will not function without javascript enabled.
+      </div>
+    </noscript>
+    <!-- Cookie Policy -->
+    <div class="container" id="cookie-policy" style="display: block;">
+      <div class="jumbotron">
+      Our site uses cookies, you can read about our policy <a href="https://soartex.net/terms#cookies">here</a>.
+      <a href="https://soartex.net/#" id="cookie-policy-dismiss"><span class="pull-right glyphicon glyphicon-remove"></span></a>
+      </div>
+    </div>
+    <!-- Main Content -->
+    <!-- Welcome Content -->
+<div id="main-header" class="container">
+  <div class="jumbotron">
+    <div class="page-header">
+      <h1>Soartex | <small>Welcome</small></h1>
+    </div>
+    <p>
+      Soartex is a smooth contemporary 64x art style for Minecraft. The textures, originally made by Soar49, have been developed and updated by 
+      fans over the past three years. These textures are carefully designed to be detailed, but not photo-realistic; organic, but not cartoony. There 
+      are two official continuations of Soartex: Fanver and Invictus.
+      <br><br>
+      Fanver is a community continuation of Soartex, a texture pack by Soar49. Fans are encouraged to contribute 
+      textures through the forum. These contributions are reviewed by graphic designers, who make friendly recommendations and ultimately determine the 
+      content of updates. Fanver is known for being faithful to the original work of Soar49, with as few alterations as possible.
+      <br><br>
+      Invictus is a second continuation developed by Shoeboxam with Goldbattle. The focus shifts to pattern and aliasing reduction for bigger builds, 
+      mipmapping optimization, presaturation for color depth in foliage, built in shaders and block models, comprehensive worldgen CTM overrides and a 
+      subtle departure from Soar49's original artwork for a stylistic revival. Development is visible on the 
+      <a href="https://github.com/InvictusGraphics/Invictus_Textures/commits/master" target="_blank"> Invictus Github</a>, but public contributions are not being accepted.
+    </p>
+  </div>
+</div>
+<!-- News Content -->
+<div class="container">
+  <div class="jumbotron">
+    <div class="news-post fanver-news"><a href="https://soartex.net/news/view/soartex-fanver-and-its-future"><h2>Soartex Fanver &amp; It's Future <small>on Aug-29-2018</small></h2></a><hr style="padding-top:10px"><p></p><p>Hello, beloved users of Soartex Fanver.</p>
+<p>We have created a blog post on the status and future looks for Soartex Fanver.</p>
+<p>You can read all about it <a href="https://medium.com/@artdude543/soartex-fanver-its-future-dee806b94c81">here</a>.</p>
+<p>Thank You,
+The Soartex Team</p><p></p><p><a href="https://soartex.net/news/view/soartex-fanver-and-its-future">Read More...</a></p></div>  </div>
+</div>
+  
+  <!-- Site Javascripts -->
+  <script type="text/javascript" async="" src="./Soartex _ Home_files/linkid.js.下载"></script><script async="" src="./Soartex _ Home_files/analytics.js.下载"></script><script type="text/javascript" src="./Soartex _ Home_files/jquery-1.11.1.min.js.下载"></script>
+  <script type="text/javascript" src="./Soartex _ Home_files/bootstrap.min.js.下载"></script>
+  <script type="text/javascript" src="./Soartex _ Home_files/vticker.min.js.下载"></script>
+  <script type="text/javascript" src="./Soartex _ Home_files/jquery.dataTables.min.js.下载"></script>
+  <script type="text/javascript" src="./Soartex _ Home_files/dataTables.bootstrap.min.js.下载"></script>
+  <script type="text/javascript" src="./Soartex _ Home_files/simply-toast.min.js.下载"></script>
+  <script type="text/javascript" src="./Soartex _ Home_files/google_tracking.js.下载"></script>
+    <script type="text/javascript" src="./Soartex _ Home_files/soartex_www.min.js.下载"></script>
+  <footer>
+    <!-- Footer -->
+<div id="footer">
+  <div class="container">
+    <div class="row">
+      <div id="news" class="col-md-12 copyright" style="overflow: hidden; position: relative; height: 20px;">
+        <ul class="footer-news" style="position: absolute; margin: 0px; padding: 0px; top: -8.34706px;">
+                  <li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Looking for modded support? You can find our downloads <a href="http://soartex.net/downloads/modpacks/">here</a></li><li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Soartex Fanver for 1.11 is out! Get it while it's cold!</li><li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Looking for modded support? You can find our downloads <a href="http://soartex.net/downloads/modpacks/">here</a></li></ul>
+        <div class="text-right">
+          <a class="footer-copyright" href="https://soartex.net/">© Soartex 2009-2022</a> - <a class="footer-terms" href="https://soartex.net/terms/">Terms &amp; Privacy</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+  $(function() {
+    $('#news').vTicker('init');
+  });
+</script>
+    <script type="text/javascript">
+  $(window).load(function() {
+     function fixSoartexNav() {
+      var windowTop = $(window).scrollTop();
+      var anchorDiv = $('#sticky-anchor').offset().top;
+      if (windowTop > anchorDiv) {
+        $('#soartex-home-nav').addClass('soartex-nav-stick');
+        $('#main-header').addClass('soartex-home-content');
+      } else {
+        $('#soartex-home-nav').removeClass('soartex-nav-stick');
+        $('#main-header').removeClass('soartex-home-content');
       }
-    </style>
-      <img src="https://s2.loli.net/2022/09/26/zNZaMVgDjp2mXWv.png"/>
-      <h2><b>Welcome!!!</b></h2>
-      <p>Hello, I'm Jakob.zero. This is my world.</p>  
-      <img src="https://s2.loli.net/2022/09/26/QBmdHvlh3rO1q9K.png"/>
-  </body>
-</html>
+    }
+    $(function() {
+      $(window).scroll(fixSoartexNav);
+      fixSoartexNav();
+    });
+  });
+</script>
+  </footer>
+</body></html>
