--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Site Font -->
     <link href="./Soartex _ Home_files/css" rel="stylesheet" type="text/css">
     <!-- Site Title -->
-    <title>Soartex | Home</title>    <!-- Site CSS Styles -->
+    <title>Jakob.zero | Home</title>    <!-- Site CSS Styles -->
     <link rel="shortcut icon" href="../assets/images/Jakob_Logo-64.ico">
     <link rel="stylesheet" type="text/css" href="./assets/theme/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/theme/css/dataTables.bootstrap.css">
