--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0020)https://PixelRuins.net/ -->
+<!-- saved from url=(0020)https://PixelRuins.com/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Site Metadata -->
     
@@ -9,13 +9,13 @@
     <meta name="keywords" content="Pixel, PixelArt, Texture Pack, Resource Pack, Minecraft, r">
     <meta name="author" content="Jakob.zero">
     <!-- Site Font -->
-    <link href="./Soartex _ Home_files/css" rel="stylesheet" type="text/css">
+    <link href="../assets/theme/css/css" rel="stylesheet" type="text/css">
     <!-- Site Title -->
     <title>Jakob.zero | Home</title>    <!-- Site CSS Styles -->
     <link rel="shortcut icon" href="../assets/images/Jakob_Logo-64.ico">
-    <link rel="stylesheet" type="text/css" href="./assets/theme/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/theme/css/dataTables.bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./assets/theme/css/soartex_site.css">
+    <link rel="stylesheet" type="text/css" href="../assets/theme/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../assets/theme/css/dataTables.bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../assets/theme/css/soartex_site.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
