--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div id="main-header" class="container">
   <div class="jumbotron">
     <div class="page-header">
-      <h1>Soartex | <small>Welcome</small></h1>
+      <h1>PixelRuins | <small>Welcome</small></h1>
     </div>
     <p>
       Soartex is a smooth contemporary 64x art style for Minecraft. The textures, originally made by Soar49, have been developed and updated by 
