--- a/index.html
+++ b/index.html
@@ -110,17 +110,7 @@
       <h1>PixelRuins | <small>Welcome</small></h1>
     </div>
     <p>
-      Soartex is a smooth contemporary 64x art style for Minecraft. The textures, originally made by Soar49, have been developed and updated by 
-      fans over the past three years. These textures are carefully designed to be detailed, but not photo-realistic; organic, but not cartoony. There 
-      are two official continuations of Soartex: Fanver and Invictus.
-      <br><br>
-      Fanver is a community continuation of Soartex, a texture pack by Soar49. Fans are encouraged to contribute 
-      textures through the forum. These contributions are reviewed by graphic designers, who make friendly recommendations and ultimately determine the 
-      content of updates. Fanver is known for being faithful to the original work of Soar49, with as few alterations as possible.
-      <br><br>
-      Invictus is a second continuation developed by Shoeboxam with Goldbattle. The focus shifts to pattern and aliasing reduction for bigger builds, 
-      mipmapping optimization, presaturation for color depth in foliage, built in shaders and block models, comprehensive worldgen CTM overrides and a 
-      subtle departure from Soar49's original artwork for a stylistic revival. Development is visible on the 
+      Hello, welcome to my homepage. I'm Jakob.zero, texture package creator and pixel artist. I like music, painting, photography and mountaineering. My favorite thing to do is to share my happiness.
       <a href="https://github.com/InvictusGraphics/Invictus_Textures/commits/master" target="_blank"> Invictus Github</a>, but public contributions are not being accepted.
     </p>
   </div>
@@ -128,13 +118,8 @@
 <!-- News Content -->
 <div class="container">
   <div class="jumbotron">
-    <div class="news-post fanver-news"><a href="https://soartex.net/news/view/soartex-fanver-and-its-future"><h2>Soartex Fanver &amp; It's Future <small>on Aug-29-2018</small></h2></a><hr style="padding-top:10px"><p></p><p>Hello, beloved users of Soartex Fanver.</p>
-<p>We have created a blog post on the status and future looks for Soartex Fanver.</p>
-<p>You can read all about it <a href="https://medium.com/@artdude543/soartex-fanver-its-future-dee806b94c81">here</a>.</p>
-<p>Thank You,
-The Soartex Team</p><p></p><p><a href="https://soartex.net/news/view/soartex-fanver-and-its-future">Read More...</a></p></div>  </div>
-</div>
-  
+    <div class="news-post fanver-news"><a href="https://JakobZero.github.io"><h2>My Homepage &amp; My World <small>Started in 2011</small></h2></a><hr style="padding-top:10px"><p></p><p>Hello, beloved users of BlockPixel.</p>
+
   <!-- Site Javascripts -->
   <script type="text/javascript" async="" src="./Soartex _ Home_files/linkid.js.下载"></script><script async="" src="./Soartex _ Home_files/analytics.js.下载"></script><script type="text/javascript" src="./Soartex _ Home_files/jquery-1.11.1.min.js.下载"></script>
   <script type="text/javascript" src="./Soartex _ Home_files/bootstrap.min.js.下载"></script>
