--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
     </div>
     <p>
       Hello, welcome to my homepage. I'm Jakob.zero, texture package creator and pixel artist. I like music, painting, photography and mountaineering. My favorite thing to do is to share my happiness.
-      <a href="https://github.com/InvictusGraphics/Invictus_Textures/commits/master" target="_blank"> Invictus Github</a>, but public contributions are not being accepted.
     </p>
   </div>
 </div>
@@ -138,7 +137,7 @@
         <ul class="footer-news" style="position: absolute; margin: 0px; padding: 0px; top: -8.34706px;">
                   <li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Looking for modded support? You can find our downloads <a href="http://soartex.net/downloads/modpacks/">here</a></li><li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Soartex Fanver for 1.11 is out! Get it while it's cold!</li><li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Looking for modded support? You can find our downloads <a href="http://soartex.net/downloads/modpacks/">here</a></li></ul>
         <div class="text-right">
-          <a class="footer-copyright" href="https://soartex.net/">© Soartex 2009-2022</a> - <a class="footer-terms" href="https://soartex.net/terms/">Terms &amp; Privacy</a>
+          <a class="footer-copyright" href="https://JakobZero.github.io/">© PixelRuins 2010-2022</a> - <a class="footer-terms" href="https://soartex.net/terms/">Terms &amp; Privacy</a>
         </div>
       </div>
     </div>
@@ -156,10 +155,10 @@
       var anchorDiv = $('#sticky-anchor').offset().top;
       if (windowTop > anchorDiv) {
         $('#soartex-home-nav').addClass('soartex-nav-stick');
-        $('#main-header').addClass('soartex-home-content');
+        $('#main-header').addClass('PixelRuins-home-content');
       } else {
         $('#soartex-home-nav').removeClass('soartex-nav-stick');
-        $('#main-header').removeClass('soartex-home-content');
+        $('#main-header').removeClass('PixelRuins-home-content');
       }
     }
     $(function() {
