--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <!-- Header Image -->
 <div class="container-fluid header-image">
   <div class="container">
-    <div class="pull-right">
-      <img class="logo-BlockPixel" src="https://s2.loli.net/2022/09/26/QBmdHvlh3rO1q9K.png" alt="BlockPixel Logo">    </div>
+    <div class="pull-left">
+      <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo">    </div>
   </div>
 </div>
 <!-- Navigation / Header -->
