--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://soartex.net/">Home</a>
+      <a class="navbar-brand" href="https://JakobZero.github.io/">Home</a>
     </div>
     <div class="collapse navbar-collapse navbar-soartex-collapse">
       <ul class="nav navbar-nav">
