--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- Navigation -->
     <style type="text/css">
   .header-image {
+      position:fixed;
     background: url('../assets/images/background_00.jpg') no-repeat center center;
     background-size: cover;
     padding-bottom: 18%;
