--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
     <!-- Cookie Policy -->
     <div class="container" id="cookie-policy" style="display: block;">
       <div class="jumbotron">          
-      <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo">
-          <a href="https://JakobZero.github.io#cookies"><h1><b>Jakob.zero</b></h1></a>.
+      <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo"><a href="https://JakobZero.github.io#cookies"><h2><b>Jakob.zero</b></h2></a>.          
       <a href="https://soartex.net/#" id="cookie-policy-dismiss"><span class="pull-right glyphicon glyphicon-remove"></span></a>
       </div>
     </div>
