--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="container-fluid header-image">
   <div class="container">
     <div class="pull-left">
-      <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo">    </div>
+      <img class="logo-JakobZero" src="../assets/images/??" alt="JakobZero Logo">    </div>
   </div>
 </div>
 <!-- Navigation / Header -->
