--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   }
 </style>
 <!-- Header Image -->
+<div class="container-fluid header-image">
+  <div class="container">
+    <div class="pull-right"></div>
+  </div>
+</div>
 <!-- Navigation / Header -->
 <div id="sticky-anchor"></div>
 <nav id="soartex-home-nav" class="navbar navbar-static-top navbar-inverse soartex-nav-bottom" role="navigation">
