--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 <div class="container-fluid header-image">
   <div class="container">
     <div class="pull-right"></div>
+    <div class="pull-right"></div>
+    <div class="pull-right"></div>
+    <div class="pull-right"></div>
   </div>
 </div>
 <!-- Navigation / Header -->
