--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="https://JakobZero.github.io/">Home</a>
     </div>
