--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <h1>PixelRuins | <small>Welcome</small></h1>
     </div>
     <p>
-      Hello, welcome to my homepage. I'm Jakob.zero, texture package creator and pixel artist. I like music, painting, photography and mountaineering. My favorite thing to do is to share my happiness.
+      Hello, welcome to my homepage. I'm Jakob.zero, texture pack creator and pixel artist. I like music, painting, photography and mountaineering. My favorite thing to do is to share my happiness.
     </p>
   </div>
 </div>
