--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 <!-- Navigation / Header -->
 <div id="sticky-anchor"></div>
-<nav id="soartex-home-nav" class="navbar navbar-static-top navbar-inverse soartex-nav-bottom" role="navigation">
+<nav id="PixelRuins-home-nav" class="navbar navbar-static-top navbar-inverse soartex-nav-bottom" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-soartex-collapse">
@@ -54,34 +54,34 @@
       <ul class="nav navbar-nav">
         <!-- <li><a href="http://forums.soartex.net/"><span class="glyphicon glyphicon-user"></span> Forum</a></li> -->
         <li class="dropdown">
-          <a href="https://soartex.net/#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cloud-download"></span> Downloads <b class="caret"></b></a>
+          <a href="https://JakobZero.github.io/#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cloud-download"></span> Downloads <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="https://soartex.net/downloads/">Vanilla</a></li>
+            <li><a href="https://JakobZero.github.io/downloads/">Vanilla</a></li>
             <li class="divider"></li>
-            <li><a href="https://soartex.net/downloads/modpacks/">Universal</a></li>
-            <li><a href="https://soartex.net/downloads/modpacks/curse/">Curse</a></li>
-            <li><a href="https://soartex.net/downloads/modpacks/ftb/">FTB</a></li>
-            <li><a href="https://soartex.net/downloads/modpacks/technic/">Technic</a></li>
-            <li><a href="https://soartex.net/downloads/modpacks/atlauncher/">ATLauncher</a></li>
+            <li><a href="https://JakobZero.github.io/downloads/modpacks/">Universal</a></li>
+            <li><a href="https://JakobZero.github.io/downloads/modpacks/curse/">Curse</a></li>
+            <li><a href="https://JakobZero.github.io/downloads/modpacks/ftb/">FTB</a></li>
+            <li><a href="https://JakobZero.github.io/downloads/modpacks/technic/">Technic</a></li>
+            <li><a href="https://JakobZero.github.io/downloads/modpacks/atlauncher/">ATLauncher</a></li>
             <li class="divider"></li>
             <li><a href="https://soartex.net/downloads/mods/">Mods</a></li>
           </ul>
         </li>
-        <li><a href="https://soartex.net/news/"><span class="glyphicon glyphicon-info-sign"></span> News</a></li>
-        <li><a href="https://soartex.net/license/"><span class="glyphicon glyphicon-lock"></span> License</a></li>
+        <li><a href="https://JakobZero.github.io/news/"><span class="glyphicon glyphicon-info-sign"></span> News</a></li>
+        <li><a href="https://JakobZero.github.io/license/"><span class="glyphicon glyphicon-lock"></span> License</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="https://soartex.net/#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-question-sign"></span> Other <b class="caret"></b></a>
+          <a href="https://JakobZero.github.io/#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-question-sign"></span> Other <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <!-- <li><a href="/twitch/"><span class="glyphicon glyphicon-film"></span> Streams</a></li> -->
             <!-- <li role="presentation" class="divider"></li> -->
-            <li><a href="https://soartex.net/tools/">Tools</a></li>
-            <li><a href="https://soartex.net/faq/">FAQ</a></li>
-            <li><a href="https://soartex.net/staff/">Staff</a></li>
-            <li><a href="https://soartex.net/contact/">Contact</a></li>
+            <li><a href="https://JakobZero.github.io/tools/">Tools</a></li>
+            <li><a href="https://JakobZero.github.io/faq/">FAQ</a></li>
+            <li><a href="https://JakobZero.github.io/staff/">Staff</a></li>
+            <li><a href="https://JakobZero.github.io/contact/">Contact</a></li>
             <li role="presentation" class="divider"></li>
-            <li><a href="https://soartex.net/donate/">Donate <span class="glyphicon glyphicon-share-alt"></span></a></li>
+            <li><a href="https://JakobZero.github.io/donate/">Donate <span class="glyphicon glyphicon-share-alt"></span></a></li>
           </ul>
         </li>
       </ul>
@@ -98,7 +98,7 @@
     <div class="container" id="cookie-policy" style="display: block;">
       <div class="jumbotron">          
       <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo"><a href="https://JakobZero.github.io#cookies"><h2><b>Jakob.zero</b></h2></a>.          
-      <a href="https://soartex.net/#" id="cookie-policy-dismiss"><span class="pull-right glyphicon glyphicon-remove"></span></a>
+      <a href="https://JakobZero.github.io/#" id="cookie-policy-dismiss"><span class="pull-right glyphicon glyphicon-remove"></span></a>
       </div>
     </div>
     <!-- Main Content -->
@@ -119,14 +119,14 @@
     <div class="news-post fanver-news"><a href="https://JakobZero.github.io"><h2>My Homepage &amp; My World <small>Started in 2011</small></h2></a><hr style="padding-top:10px"><p></p><p>Hello, beloved users of BlockPixel.</p>
 
   <!-- Site Javascripts -->
-  <script type="text/javascript" async="" src="./Soartex _ Home_files/linkid.js.下载"></script><script async="" src="./Soartex _ Home_files/analytics.js.下载"></script><script type="text/javascript" src="./Soartex _ Home_files/jquery-1.11.1.min.js.下载"></script>
-  <script type="text/javascript" src="./Soartex _ Home_files/bootstrap.min.js.下载"></script>
-  <script type="text/javascript" src="./Soartex _ Home_files/vticker.min.js.下载"></script>
-  <script type="text/javascript" src="./Soartex _ Home_files/jquery.dataTables.min.js.下载"></script>
-  <script type="text/javascript" src="./Soartex _ Home_files/dataTables.bootstrap.min.js.下载"></script>
-  <script type="text/javascript" src="./Soartex _ Home_files/simply-toast.min.js.下载"></script>
-  <script type="text/javascript" src="./Soartex _ Home_files/google_tracking.js.下载"></script>
-    <script type="text/javascript" src="./Soartex _ Home_files/soartex_www.min.js.下载"></script>
+  <script type="text/javascript" async="" src="../assets/theme/js/linkid.js"></script><script async="" src="../assets/theme/js/analytics.js"></script><script type="text/javascript" src="../assets/theme/js/jquery-1.11.1.min.js.下载"></script>
+  <script type="text/javascript" src="../assets/theme/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../assets/theme/js/vticker.min.js"></script>
+  <script type="text/javascript" src="../assets/theme/js/jquery.dataTables.min.js"></script>
+  <script type="text/javascript" src="../assets/theme/js/dataTables.bootstrap.min.js"></script>
+  <script type="text/javascript" src="../assets/theme/js/simply-toast.min.js"></script>
+  <script type="text/javascript" src="../assets/theme/js/google_tracking.js"></script>
+    <script type="text/javascript" src="../assets/theme/js/www.min.js"></script>
   <footer>
     <!-- Footer -->
 <div id="footer">
@@ -136,7 +136,7 @@
         <ul class="footer-news" style="position: absolute; margin: 0px; padding: 0px; top: -8.34706px;">
                   <li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Looking for modded support? You can find our downloads <a href="http://soartex.net/downloads/modpacks/">here</a></li><li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Soartex Fanver for 1.11 is out! Get it while it's cold!</li><li class="footer-news-content" style="margin: 0px; padding: 0px; height: 20px;">Looking for modded support? You can find our downloads <a href="http://soartex.net/downloads/modpacks/">here</a></li></ul>
         <div class="text-right">
-          <a class="footer-copyright" href="https://JakobZero.github.io/">© PixelRuins 2010-2022</a> - <a class="footer-terms" href="https://soartex.net/terms/">Terms &amp; Privacy</a>
+          <a class="footer-copyright" href="https://JakobZero.github.io/">© PixelRuins 2010-2022</a> - <a class="footer-terms" href="https://JakobZero.github.io/terms/">Terms &amp; Privacy</a>
         </div>
       </div>
     </div>
