--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container" id="cookie-policy" style="display: block;">
       <div class="jumbotron">          
       <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo"><a href="https://JakobZero.github.io#cookies"><h2><b>Jakob.zero</b></h2></a>.
-      <a href="https://twitter.com/Jakob_zero">Jakob_zero</a>
+      <a href="https://twitter.com/Jakob_zero">@Jakob_zero</a>
       <a href="https://JakobZero.github.io/#" id="cookie-policy-dismiss"><span class="pull-right glyphicon glyphicon-remove"></span></a>
       </div>
     </div>
