--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
   <script type="text/javascript" src="../assets/theme/js/google_tracking.js"></script>
     <script type="text/javascript" src="../assets/theme/js/www.min.js"></script>
   <footer>
+<div id="footer">
+  <div class="container">
+    <div class="row">
+      <div id="news" class="col-md-12 copyright" style="overflow: hidden; position: relative; height: 20px;">
+        <div class="text-right">
+          <a class="footer-copyright" href="https://JakobZero.github.io/">© PixelRuins 2010-2022</a> - <a class="footer-terms" href="https://JakobZero.github.io/terms/">Terms &amp; Privacy</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <script>
   $(function() {
