--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
         <strong>Danger!</strong><br/>Your browser does not support javascript. This site will not function without javascript enabled.
       </div>
     </noscript>
+    <!-- Welcome Content -->
+<div id="main-header" class="container">
+  <div class="jumbotron">
+    <div class="page-header">
+      <h1>PixelRuins | <small>Welcome</small></h1>
+    </div>
+    <p>
+      Hello, welcome to my homepage. I'm Jakob.zero, texture pack creator and pixel artist. I like music, painting, photography and mountaineering. My favorite thing to do is to share my happiness.
+    </p>
+  </div>
+</div>
     <!-- Cookie Policy -->
     <div class="container" id="cookie-policy" style="display: block;">
       <div class="jumbotron">          
