--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
     </p>
   </div>
 </div>
+<!-- Welcome Content -->
+<div id="main-header" class="container">
+  <div class="jumbotron">
+    <div class="page-header">
+      <h2>My Works</h2>
+    </div>
+    <p>
+      BlockPixel
+    </p>
+    <p>
+      GridPixel
+    </p>
+  </div>
+</div>
     <!-- Cookie Policy -->
     <div class="container" id="cookie-policy" style="display: block;">
       <div class="jumbotron">          
