--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="row">
       <div id="news" class="col-md-12 copyright" style="overflow: hidden; position: relative; height: 20px;">
         <div class="text-right">
-          <a class="footer-copyright" href="https://JakobZero.github.io/">© PixelRuins 2010-2022</a> - <a class="footer-terms" href="https://JakobZero.github.io/terms/">Terms &amp; Privacy</a>
+          <a>©2022 PixelRuins. All Rights Reserved.</a>
         </div>
       </div>
     </div>
