--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <div class="container">
     <div class="row">
       <div id="news" class="col-md-12 copyright" style="overflow: hidden; position: relative; height: 20px;">
-        <div class="text-right">
+        <div class="text-center">
           <a>©2022 PixelRuins. All Rights Reserved.</a>
         </div>
       </div>
