--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
     <div class="row">
       <div id="news" class="col-md-12 copyright" style="overflow: hidden; position: relative; height: 20px;">
         <div class="text-center">
-          <a>©2022 PixelRuins. All Rights Reserved.</a>
+          <a>
+              ©2022 PixelRuins. All Rights Reserved.
+            
+            </a>
         </div>
       </div>
     </div>
