--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
     <!-- Cookie Policy -->
     <div class="container" id="cookie-policy" style="display: block;">
       <div class="jumbotron">          
-      <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo"><a href="https://JakobZero.github.io#cookies"><h2><b>Jakob.zero</b></h2></a>
+      <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo">
+      <a href="https://JakobZero.github.io#cookies"><h2><b>Jakob.zero</b></h2></a>
       <a href="https://twitter.com/Jakob_zero">@Jakob_zero</a>
       </div>
     </div>
@@ -142,8 +143,9 @@
         <div class="text-center">
           <a>
               ©2022 PixelRuins. All Rights Reserved.
-            
-            </a>
+              <br/>
+              <br/>
+          </a>
         </div>
       </div>
     </div>
