--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="container" id="cookie-policy" style="display: block;">
       <div class="jumbotron">          
       <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo">
-      <a href="https://JakobZero.github.io#cookies"><h2><b>Jakob.zero</b></h2></a>
+      <a href="#"><h2><b>Jakob.zero</b></h2></a>
       <a href="https://twitter.com/Jakob_zero">@Jakob_zero</a>
       </div>
     </div>
