--- a/index.html
+++ b/index.html
@@ -112,11 +112,14 @@
       <div class="span3">
         <a href="https://JakobZero.github.io"><img src="https://s2.loli.net/2022/04/16/igLhdJfjB6AQrza.png" width="150px"></a>
         <h3>BlockPixel</h3>
-        <p>JSON Exporter MAX Script</p>
+        <p>Texture Pack</p>
       </div>
-    <p>
-      GridPixel
-    </p>
+      <div class="span3">
+        <a href="https://JakobZero.github.io"><img src="https://s2.loli.net/2022/04/16/igLhdJfjB6AQrza.png" width="150px"></a>
+        <h3>GridPixel</h3>
+        <p>Texture Pack</p>
+      </div>
+    </div>
   </div>
 </div>
     <!-- Cookie Policy -->
