--- a/index.html
+++ b/index.html
@@ -53,22 +53,8 @@
     <div class="collapse navbar-collapse navbar-soartex-collapse">
       <ul class="nav navbar-nav">
         <!-- <li><a href="http://forums.soartex.net/"><span class="glyphicon glyphicon-user"></span> Forum</a></li> -->
-        <li class="dropdown">
-          <a href="https://JakobZero.github.io/#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cloud-download"></span> Downloads <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://JakobZero.github.io/downloads/">Vanilla</a></li>
-            <li class="divider"></li>
-            <li><a href="https://JakobZero.github.io/downloads/modpacks/">Universal</a></li>
-            <li><a href="https://JakobZero.github.io/downloads/modpacks/curse/">Curse</a></li>
-            <li><a href="https://JakobZero.github.io/downloads/modpacks/ftb/">FTB</a></li>
-            <li><a href="https://JakobZero.github.io/downloads/modpacks/technic/">Technic</a></li>
-            <li><a href="https://JakobZero.github.io/downloads/modpacks/atlauncher/">ATLauncher</a></li>
-            <li class="divider"></li>
-            <li><a href="https://soartex.net/downloads/mods/">Mods</a></li>
-          </ul>
-        </li>
-        <li><a href="https://JakobZero.github.io/news/"><span class="glyphicon glyphicon-info-sign"></span> News</a></li>
-        <li><a href="https://JakobZero.github.io/license/"><span class="glyphicon glyphicon-lock"></span> License</a></li>
+        <li><a href="https://JakobZero.github.io/news/"><span class="glyphicon glyphicon-info-sign"></span> Works</a></li>
+        <li><a href="https://JakobZero.github.io/license/"><span class="glyphicon glyphicon-lock"></span> About</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
